# prism

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  test_tui.py
docs/: components.md  development.md  testing.md
prism/: __init__.py  app.py  cli.py  commands.py  config.py  constants.py  jump_overlay.py  jumper.py  messages.py  models.py  prism.tcss  themes.py  types.py
prism/components/blocks/: badges.py  comment_item.py  resizer.py
prism/components/modals/: comment_composer.py  jump_overlay.py  jumper.py  new_pr.py  reply_composer.py  review_modals.py
prism/components/panels/: ai_panel.py  comment_list.py  comments_panel.py  diff_viewer.py  file_tree.py
prism/components/sections/: header_bar.py  pr_browser.py  pr_list_widget.py  pr_preview_widget.py  review_workspace.py
prism/screens/: comment_composer.py  main.py  new_pr.py  pr_list.py  review.py
prism/services/: ai.py  diff.py  github.py  history.py
prism/widgets/: ai_panel.py  comment_list.py  comments_panel.py  diff_viewer.py  file_tree.py  header_bar.py  panel_resizer.py  pr_list_widget.py  pr_preview_widget.py  reply_composer.py  review_modal.py
scripts/: check_no_module_docstring.py
tests/: conftest.py  test_cli.py  test_comments.py  test_config.py  test_models.py  test_post_comment.py  test_reply.py  test_review_actions.py  test_themes.py
tests/components/: test_comments_panel.py  test_new_pr.py  test_pr_list_widget.py
tests/screens/: test_comment_composer.py
tests/services/: test_ai.py  test_diff.py  test_github_extra.py  test_history.py
tests/smoke/: test_app.py
