[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism"
version = "0.1.0"
description = "Terminal UI for reviewing GitHub PRs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.60",
    "PyGithub>=2.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
prism = "prism.cli:app"
