[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism"
version = "0.1.0"
description = "Terminal UI for reviewing GitHub PRs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.60",
    "PyGithub>=2.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "anthropic>=0.28",
    "diskcache>=5.6",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

[project.scripts]
prism = "prism.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["prism"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
