[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism"
version = "0.1.0"
description = "Terminal UI for reviewing GitHub PRs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.60,<9",
    "PyGithub>=2.1,<3",
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
    "typer>=0.12,<1",
    "rich>=13.0,<16",
    "anthropic>=0.28,<1",
    "diskcache>=5.6,<6",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11,<1",
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
]

[project.scripts]
prism = "prism.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["prism"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
